k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-app-ingress
  namespace: default
  annotations:
    # This ensures that if a user hits /auth/login,
    # the request is sent to the backend as /login
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: song-app.test
      http:
        paths:
          # 1. Main Song Service (Root Path)
          - path: /song/?(.*)
            pathType: Prefix
            backend:
              service:
                name: gin-app-service
                port:
                  number: 80

          # 2. Placeholder for Future Service A (e.g., Auth or Users)
          # Access this via http://song-app.test/service-a
          - path: /streaming/?(.*)
            pathType: Prefix
            backend:
              service:
                name: gin-streaming-service
                port:
                  number: 80
          
          #* UNCOMMENT THIS ONE FOR THE USER SERVICE
          # 3. Placeholder for Future Service B (e.g., Analytics)
          # Access this via http://song-app.test/service-b
          # - path: /user/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: gin-user-service
          #       port:
          #         number: 80
